// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator giraphql {
  provider = "prisma-giraphql-types"
  // clientOutput = "@prisma/client"
  // output = "./giraphql-types.ts"
}

generator dbml {
  provider   = "prisma-dbml-generator"
  // output     = "../dbml"
  outputName = "lireddit.dbml"
  projectName = "lireddit"
  projectDatabaseType = "PostgreSQL"
  projectNote = "A Reddit clone"
  // projectNotePath = ""
  // manyToMany = false
}

generator docs {
  provider = "node node_modules/prisma-docs-generator"
  // output = "../../docs"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Post {
  id        Int      @id @default(autoincrement())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  title     String   @db.VarChar(255)
  content   String?
  published Boolean  @default(false)
  author    User     @relation(fields: [authorId], references: [id])
  authorId  Int
}

model Profile {
  id     Int     @id @default(autoincrement())
  bio    String?
  user   User    @relation(fields: [userId], references: [id])
  userId Int     @unique
}

model User {
  id      Int      @id @default(autoincrement())
  email   String   @unique
  name    String?
  posts   Post[]
  profile Profile?
}

