//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "lireddit" {
  database_type: 'PostgreSQL'
  Note: 'A Reddit clone'
}

Table Post {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  content String
  published Boolean [not null, default: false]
  author User [not null]
  authorId Int [not null]
}

Table Profile {
  id Int [pk, increment]
  bio String
  user User [not null]
  userId Int [unique, not null]
}

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  name String
  posts Post [not null]
  profile Profile
}

Ref: Post.authorId > User.id

Ref: Profile.userId - User.id